update with 1 changes

--- a/note/gitignore.html
+++ b/note/gitignore.html
@@ -68,20 +68,20 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org7d31a3c"><code>.gitignore</code></a></li>
-<li><a href="#org184eb2c">gitignore.io</a>
+<li><a href="#org9c4cdc3">.gitignore</a></li>
+<li><a href="#org24d95fc">gitignore.io</a>
 <ul>
-<li><a href="#org4a173d3">사용법</a></li>
-<li><a href="#orgbf92003">Command Line</a></li>
+<li><a href="#org45f1a4a">사용법</a></li>
+<li><a href="#org7c5723b">Command Line</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org7d31a3c" class="outline-2">
-<h2 id="org7d31a3c"><code>.gitignore</code></h2>
-<div class="outline-text-2" id="text-org7d31a3c">
+<div id="outline-container-org9c4cdc3" class="outline-2">
+<h2 id="org9c4cdc3">.gitignore</h2>
+<div class="outline-text-2" id="text-org9c4cdc3">
 <p>
 <a href="git.html">Git</a>에서 저장소로 관리하지 않을 파일이나 디렉터리 패턴을 정리하는 파일이다.
 예를 들자면 아래와 같은 식이다.
@@ -114,28 +114,29 @@ env/
 </div>
 </div>
 </div>
-<div id="outline-container-org184eb2c" class="outline-2">
-<h2 id="org184eb2c">gitignore.io</h2>
-<div class="outline-text-2" id="text-org184eb2c">
+<div id="outline-container-org24d95fc" class="outline-2">
+<h2 id="org24d95fc">gitignore.io</h2>
+<div class="outline-text-2" id="text-org24d95fc">
 <p>
 <a target="_blank" href="https://www.gitignore.io/">🌏gitignore.io</a>라는 사이트는 프로젝트나 언어 등 몇 가지 기준으로
 자주 쓰이는 <code>.gitignore</code> 목록을 생성해 주는 서비스다.
-요즘은 웬만한 프로젝트들은 복잡한 디렉터리 구조를 가지며 이 중 다수의 로컬 전용 캐시 등등이 있는데
-이것들을 매번 수작업으로 기입하기는 힘든데, 이럴 대 딱 쓰기 좋은 서비스다.
+요즘은 웬만한 프로젝트들은 복잡한 디렉터리 구조를 가지며 다수의 로컬 전용 캐시를 가지는 경우들이 많다.
+이런 것들은 저장소에 올리지 않는 게 바람직한데, 이것들을 매번 수작업으로 기입하기는 매우 귀찮은 일이다.
+gitignore.io 서비스는 이럴 때 딱 쓰기 좋은 서비스다.
 </p>
 </div>
-<div id="outline-container-org4a173d3" class="outline-3">
-<h3 id="org4a173d3">사용법</h3>
-<div class="outline-text-3" id="text-org4a173d3">
+<div id="outline-container-org45f1a4a" class="outline-3">
+<h3 id="org45f1a4a">사용법</h3>
+<div class="outline-text-3" id="text-org45f1a4a">
 <p>
 사용 방법은 사이트 중앙의 텍스트 필드에 언어나 프로젝트 이름을 써 넣고 Create 버튼을 누르면 된다.
 그 후 나오는 내용을 <code>.gitignore</code> 파일에 그대로 쓰면 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgbf92003" class="outline-3">
-<h3 id="orgbf92003">Command Line</h3>
-<div class="outline-text-3" id="text-orgbf92003">
+<div id="outline-container-org7c5723b" class="outline-3">
+<h3 id="org7c5723b">Command Line</h3>
+<div class="outline-text-3" id="text-org7c5723b">
 <p>
 일반적인 웹 사이트인 줄 알았는데 약간 특수한 트윅으로 <a href="cli.html">CLI</a> 도구가 제공된다.
 정확히 말해서 <a href="shell.html">셸</a> 함수를 초기화 파일에 쓰는 형태로 설정해서 사용하는 도구다.
