--- a/note/gitignore.html
+++ b/note/gitignore.html
@@ -68,23 +68,27 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org9c4cdc3">.gitignore</a></li>
-<li><a href="#org24d95fc">gitignore.io</a>
+<li><a href="#org8d6d27c">.gitignore</a></li>
+<li><a href="#org48f6bc7">gitignore.io</a>
 <ul>
-<li><a href="#org45f1a4a">사용법</a></li>
-<li><a href="#org7c5723b">Command Line</a></li>
+<li><a href="#orgb6d378f">사용법</a></li>
+<li><a href="#org365c6ad">Command Line</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org9c4cdc3" class="outline-2">
-<h2 id="org9c4cdc3">.gitignore</h2>
-<div class="outline-text-2" id="text-org9c4cdc3">
+<div id="outline-container-org8d6d27c" class="outline-2">
+<h2 id="org8d6d27c">.gitignore</h2>
+<div class="outline-text-2" id="text-org8d6d27c">
 <p>
-<a href="git.html">Git</a>에서 저장소로 관리하지 않을 파일이나 디렉터리 패턴을 정리하는 파일이다.
-예를 들자면 아래와 같은 식이다.
+<code>.gitignore</code> 파일은 <a href="git.html">Git</a>에서 저장소로 관리하지 않을 파일이나 디렉터리 패턴을 정리하는 파일이다.
+주로 프로젝트 루트 디렉터리에 위치하지만 필요하다면 각 하부 디렉터리에도 생성할 수 있다.
+</p>
+
+<p>
+<code>.gitignore</code> 를 작성하는 방법의 예를 들자면 아래와 같은 식이다.
 </p>
 <div class="org-src-container">
 <pre class="src src-text">somefile.txt
@@ -114,9 +118,9 @@ env/
 </div>
 </div>
 </div>
-<div id="outline-container-org24d95fc" class="outline-2">
-<h2 id="org24d95fc">gitignore.io</h2>
-<div class="outline-text-2" id="text-org24d95fc">
+<div id="outline-container-org48f6bc7" class="outline-2">
+<h2 id="org48f6bc7">gitignore.io</h2>
+<div class="outline-text-2" id="text-org48f6bc7">
 <p>
 <a target="_blank" href="https://www.gitignore.io/">🌏gitignore.io</a>라는 사이트는 프로젝트나 언어 등 몇 가지 기준으로
 자주 쓰이는 <code>.gitignore</code> 목록을 생성해 주는 서비스다.
@@ -125,18 +129,18 @@ env/
 gitignore.io 서비스는 이럴 때 딱 쓰기 좋은 서비스다.
 </p>
 </div>
-<div id="outline-container-org45f1a4a" class="outline-3">
-<h3 id="org45f1a4a">사용법</h3>
-<div class="outline-text-3" id="text-org45f1a4a">
+<div id="outline-container-orgb6d378f" class="outline-3">
+<h3 id="orgb6d378f">사용법</h3>
+<div class="outline-text-3" id="text-orgb6d378f">
 <p>
 사용 방법은 사이트 중앙의 텍스트 필드에 언어나 프로젝트 이름을 써 넣고 Create 버튼을 누르면 된다.
 그 후 나오는 내용을 <code>.gitignore</code> 파일에 그대로 쓰면 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7c5723b" class="outline-3">
-<h3 id="org7c5723b">Command Line</h3>
-<div class="outline-text-3" id="text-org7c5723b">
+<div id="outline-container-org365c6ad" class="outline-3">
+<h3 id="org365c6ad">Command Line</h3>
+<div class="outline-text-3" id="text-org365c6ad">
 <p>
 일반적인 웹 사이트인 줄 알았는데 약간 특수한 트윅으로 <a href="cli.html">CLI</a> 도구가 제공된다.
 정확히 말해서 <a href="shell.html">셸</a> 함수를 초기화 파일에 쓰는 형태로 설정해서 사용하는 도구다.
